--- a/class_work2/homework_first_html.html
+++ b/class_work2/homework_first_html.html
@@ -8,7 +8,7 @@
 
 <h1> Ricardo's first html assignment </h1>
 
-<img src="class_work2/pic3.jpg">
+<img src="https://ricardoalger.github.io/class_work2/pic3.JPG">
 <Br/>
 <a href="_blank" target="_blank">Link 1</a>
 <Br/>
@@ -19,7 +19,7 @@
 
 <h1>Favorite Sandwich</h1>
 
-<img src="class_work2/sandwich.jpg">
+<img src="https://ricardoalger.github.io/class_work2/sandwich.JPG">
 
 <h3>Ingredients</h3>
 
