--- a/HW_GifTastic/GifTastic.html
+++ b/HW_GifTastic/GifTastic.html
@@ -46,7 +46,10 @@
 
 		<!-- <div id="topic-gif"></div> -->
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+			</DIV>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	
 	<script type="text/javascript">
 
 
@@ -105,6 +108,6 @@
 	
 
 	</script>
-	</DIV>
+
 </body>
 </html>
